Small formatting changes
Add border around messages
New title to page

--- a/src/message.css
+++ b/src/message.css
@@ -1,3 +1,11 @@
+.messageList {
+  padding: 20px;
+}
+
+.message {
+  border: solid 1px pink;
+}
+
 .author {
   color: green;
   font-size: 1.8rem;
